# nihongofukushuushiyou

./: .envrc  .gitignore  Cargo.toml  LICENSE.txt  README.md  devenv.nix  flashcards.db
src/: cli.rs  db.rs  gui.rs  main.rs  nyuuryokusha.rs  nyuushutsuryokusha.rs  question.rs
src/libfukushuu/: db.rs  mod.rs  question.rs  shitsumon.rs
