[package]
name = "nihongofukushuushiyou"
description = "日本語復習しよう！ (Nihongofukushūshiyō!): A card-based quiz app built with Rust."
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled", "backup"] }
log = "0.4.22"
env_logger = "0.11.6"
rand = "0.9.0-beta.1"
colored = "2.2.0"
text_io = "0.1.12"
clap = { version = "4.5.23", features = ["derive"] }

[[bin]]
name = "nyuuryokusha"
path = "src/nyuuryokusha.rs"
